Basic user registration

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Raj2310/coder-dashboard#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "csv-parser": "^1.11.0",
     "express": "^4.15.2",
     "mongodb": "^2.2.24",
