--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Homepage for the coding chapter",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "csv-parser": "^1.11.0",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mongodb": "^2.2.24",
     "nodemailer": "^3.1.5",
