Change package json to remove heroku build failing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "coder-dashboard",
   "version": "1.0.0",
+  "engines": {
+    "node": "7.0.0"
+  },
   "description": "Homepage for the coding chapter",
   "scripts": {
     "start": "node app.js",
