--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mongodb": "^2.2.24",
     "nodemailer": "^3.1.5",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "request": "^2.81.0"
   }
 }
