--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mongodb": "^2.2.24",
+    "morgan": "^1.8.1",
     "nodemailer": "^3.1.5",
     "nodemon": "^1.11.0",
     "request": "^2.81.0"
