--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "homepage": "https://github.com/Raj2310/coder-dashboard#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
     "csv-parser": "^1.11.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "mongodb": "^2.2.24",
     "morgan": "^1.8.1",
     "nodemailer": "^3.1.5",
