--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "mongodb": "^2.2.24",
+    "mongoose": "^4.9.3",
     "morgan": "^1.8.1",
     "nodemailer": "^3.1.5",
-    "nodemon": "^1.11.0",
     "request": "^2.81.0"
   }
 }
